<resources>
    <string name="app_name">Way For Life</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">HOME</string>
    <string name="feed">FEED</string>
    <string name="events">EVENTS</string>
    <string name="notification">NOTIFICATION</string>
    <string name="donate">Donate</string>
    <string name="request_blood">Request Blood</string>
    <string name="about_us">About us</string>
    <string name="edit_profile">Edit profile</string>
    <string name="follow_us">Follow Us</string>
    <string name="logout">Logout</string>
    <string name="title_activity_report1">Report1</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_select_location">SelectLocation</string>
    <string name="gallery">GALLERY</string>
    <string name="camera">CAMERA</string>
    <string name="location">Location</string>
    <string name="description">Problem</string>
    <string name="date">Date</string>
    <string name="report">Report</string>
    <string name="click_from_camera">Click From Camera</string>
    <string name="select_from_gallery">Select From Gallery</string>
    <string name="title_activity_calendar_events">CalendarEvents</string>
    <string name="remove">REMOVE</string>
    <string name="add">ADD</string>
    <string name="event">Event</string>
    <string name="descr">Details</string>
</resources>
